<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movies</string>
    <string name="detail_name" tools:ignore="UnusedResources">Detail Movie</string>
    <string name="Sort1">Most Popular</string>
    <string name="Sort2">Top Rated</string>
    <string name="ReleaseDate">Release Date :</string>
    <string name="rating">User Rating :</string>
    <string name="originaltitle" tools:ignore="UnusedResources">Original Title :</string>
    <string name="synopsis">Synopsis :</string>
    <string name="contentDescription">Movie poster</string>
    <string name="contentDescriptionSigleImage">Movie poster</string>
    <string name="Fav">Favorite</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="favorites">Favorites</string>
    <string name="byAuthor">By :</string>
    <string name="ReviewContent">Review Content :</string>

</resources>
